syntax = "proto2";

package proto.schema;

import "google/protobuf/timestamp.proto";

option java_package = "proto.schema";
option java_outer_classname = "TransactionProto";

message Transaction {
  required string atm_machine_id = 1;
  required string customer_id = 2;
  required double amount = 3;
  required google.protobuf.Timestamp event_timestamp = 4;
}